--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 /*RESET*/
+@font-face {
+  font-family: 'haptik-light';
+  src:  url('../fonts/GT-Haptik-Light.woff') format('woff')
+}
 body {
-    font-size: 15px;
+    font-size: 20px;
     line-height: 33px;
     font-family: haptik-light, helvetica, "sans-serif";
     color: #0f0f0f;
@@ -9,22 +13,23 @@ body {
 
 a {
     color: #151515;
+    text-decoration: none;
+}
+
+
+/*NAVIGATION*/
+
+.brand {
+    margin: 0 0 0 1rem;
 }
 
 ul {
     list-style-type: none;
+    padding: 0;
+    margin: 0 1rem 0 0;
+    float: right;
 }
 
-/*NAVIGATION*/
-/*.nav-head {*/
-    /*display: flex;*/
-    /*!*flex-direction: row;*!*/
-    /*justify-content: space-between;*/
-/*}*/
-
-/*.nav-item {*/
-    /*display: flex;*/
-    /*!*flex-direction: row;*!*/
-    /*!*justify-content: space-around;*!*/
-    /*!*align-items: flex-start;*!*/
-/*}*/
+ul li {
+    display: inline-block;
+}
