--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 /*RESET*/
 @font-face {
-  font-family: 'haptik-light';
-  src:  url('../fonts/GT-Haptik-Light.woff') format('woff')
+    font-family: 'haptik-light';
+    src: url('../fonts/GT-Haptik-Light.woff') format('woff')
 }
+
 body {
     font-size: 20px;
     line-height: 33px;
@@ -32,4 +33,15 @@ ul {
 
 ul li {
     display: inline-block;
+}
+
+ul li a {
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 0.1rem;
+}
+
+.show-case {
+    width: calc(25% - 15px);
+    height: calc((25vw - 15px) * 6 / 8);
 }
