--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -1,3 +1,8 @@
 body {
   font: 100% Helvetica, sans-serif;
   color: #333; }
+
+.box {
+  -webkit-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  transform: rotate(30deg); }
