--- a/assets/style/sass/index.scss
+++ b/assets/style/sass/index.scss
@@ -5,3 +5,10 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
 }
+
+@mixin transform($property) {
+  -webkit-transform: $property;
+  -ms-transform: $property;
+  transform: $property;
+}
+.box { @include transform(rotate(30deg)); }
