--- a/assets/style/sass/index.scss
+++ b/assets/style/sass/index.scss
@@ -1,6 +1,13 @@
-$font-stack:    Helvetica, sans-serif;
+@import "reset";
+@font-face {
+    font-family: 'haptik-light';
+    src: url('../../fonts/GT-Haptik-Light.woff') format('woff')
+}
+$font-stack: haptik-light, helvetica, "sans-serif";
 $primary-color: #333;
-
+p{
+  color: yellow;
+}
 body {
   font: 100% $font-stack;
   color: $primary-color;
