fix duplicate compilation with prefix _ in sass file import

--- a/assets/style/sass/index.scss
+++ b/assets/style/sass/index.scss
@@ -1,4 +1,4 @@
-@import "reset";
+@import "_reset";
 @font-face {
     font-family: 'haptik-light';
     src: url('../../fonts/GT-Haptik-Light.woff') format('woff')
