seprate minimal site

--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: 'haptik-light';
-  src: url("../../fonts/GT-Haptik-Light.woff") format("woff");
+  src: url("../../../mini/fonts/GT-Haptik-Light.woff") format("woff");
 }
 
 p {
