--- a/assets/style/sass/index.scss
+++ b/assets/style/sass/index.scss
@@ -1,7 +1,7 @@
 @import "_reset";
 @font-face {
     font-family: 'haptik-light';
-    src: url('../../fonts/GT-Haptik-Light.woff') format('woff')
+    src: url('../../../mini/fonts/GT-Haptik-Light.woff') format('woff')
 }
 $font-stack: haptik-light, helvetica, "sans-serif";
 $primary-color: #333;
