--- a/mini/style.css
+++ b/mini/style.css
@@ -1,7 +1,7 @@
 /*RESET*/
 @font-face {
     font-family: 'haptik-light';
-    src: url('../../fonts/GT-Haptik-Light.woff') format('woff')
+    src: url('fonts/GT-Haptik-Light.woff') format('woff')
 }
 
 body {
